adapted the examples

--- a/notebooks/Classic-OCC-Bottle.ipynb
+++ b/notebooks/Classic-OCC-Bottle.ipynb
@@ -54,6 +54,10 @@
     "from OCC.Core.TopAbs import TopAbs_EDGE, TopAbs_FACE\n",
     "from OCC.Core.TopTools import TopTools_ListOfShape\n",
     "\n",
+    "from OCC.Core.Bnd import Bnd_Box\n",
+    "from OCC.Core.BRepBndLib import brepbndlib_Add\n",
+    "from OCC.Core.BRepMesh import BRepMesh_IncrementalMesh\n",
+    "\n",
     "def face_is_plane(face: TopoDS_Face) -> bool:\n",
     "    \"\"\"\n",
     "    Returns True if the TopoDS_Face is a plane, False otherwise\n",
@@ -69,6 +73,20 @@
     "    \"\"\"\n",
     "    return BRepAdaptor_Surface(aFace, True).Plane()\n",
     "\n",
+    "def get_boundingbox(shape, tol=1e-6, use_mesh=True):\n",
+    "    bbox = Bnd_Box()\n",
+    "    bbox.SetGap(tol)\n",
+    "    if use_mesh:\n",
+    "        mesh = BRepMesh_IncrementalMesh()\n",
+    "        mesh.SetParallelDefault(True)\n",
+    "        mesh.SetShape(shape)\n",
+    "        mesh.Perform()\n",
+    "        if not mesh.IsDone():\n",
+    "            raise AssertionError(\"Mesh not done.\")\n",
+    "    brepbndlib_Add(shape, bbox, use_mesh)\n",
+    "\n",
+    "    xmin, ymin, zmin, xmax, ymax, zmax = bbox.Get()\n",
+    "    return {\"xmin\": xmin, \"ymin\": ymin, \"zmin\":zmin, \"xmax\": xmax, \"ymax\": ymax, \"zmax\":zmax}\n",
     "\n",
     "height = 70\n",
     "width = 50\n",
@@ -221,6 +239,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98173799-9dea-44e0-85be-54dcc64d8192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bb = get_boundingbox(bottle)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6d6835f9-4e7a-4096-9cbb-b69742349ada",
    "metadata": {},
@@ -269,7 +297,8 @@
     "            \"normals\": normals,\n",
     "            \"edges\": edges\n",
     "          },\n",
-    "          \"color\": \"#e8b024\"\n",
+    "          \"color\": \"#e8b024\",\n",
+    "          \"bb\": bb\n",
     "        }\n",
     "      ],\n",
     "      \"loc\": None\n",
@@ -295,9 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cad_viewer_widget import show, close_viewers, CadViewer\n",
-    "\n",
-    "close_viewers()"
+    "from cad_viewer_widget import show, close_sidecars, CadViewer"
    ]
   },
   {
@@ -344,12 +371,30 @@
     "cv = show(\n",
     "    *render(bottle, \"Bottle\", mesh_quality=0.25),\n",
     "    height=800,\n",
-    "    sidecar=\"OCC1\", anchor=\"right\",\n",
+    "    title=\"OCC1\", \n",
+    "    anchor=\"split-right\",\n",
     "    axes=True,\n",
     "    ortho=False,\n",
     "    control=\"orbit\",\n",
     "    grid=(False, False, False),\n",
     "    transparent=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31c522b1-e7aa-4e95-b20e-6bfb420bb998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = show(\n",
+    "    *render(bottle, \"Bottle\", mesh_quality=0.25),\n",
+    "    height=800,\n",
+    "    title=\"OCC2\", \n",
+    "    anchor=\"right\",\n",
+    "    control=\"trackball\",\n",
+    "    ortho=True\n",
     ")"
    ]
   },
@@ -383,16 +428,8 @@
     "    image_id = \"img_\" + str(uuid.uuid4())\n",
     "    html = \"<div></div>\"\n",
     "    display(HTML(html), display_id=image_id)\n",
-    "    cv.widget.image_id = image_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b7824e1-1964-444c-9ad1-9d46cb86d686",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    cv.widget.image_id = image_id\n",
+    "    \n",
     "cv.add_shapes(\n",
     "    *render(bottle, \"Bottle\", mesh_quality=0.25), \n",
     "    axes=True,\n",
@@ -434,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aabd8ca-0782-4fa4-8be7-e594cc8febb9",
+   "id": "f3cf5a8f-af82-4b50-8882-7eeeb53ad20e",
    "metadata": {},
    "outputs": [],
    "source": []
