--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -19,7 +19,10 @@
     "import json\n",
     "import time\n",
     "import ipywidgets as widgets\n",
-    "from cad_viewer_widget import AnimationTrack, CadViewer, show, get_sidecar, get_sidecars, get_default, close_sidecar, close_sidecars, open_viewer, set_default\n",
+    "from cad_viewer_widget import (\n",
+    "    AnimationTrack, CadViewer, show, open_viewer, \n",
+    "    get_sidecar, get_sidecars, close_sidecar, close_sidecars, get_default_sidecar, set_default_sidecar\n",
+    ")\n",
     "\n",
     "from cad_viewer_widget.utils import numpyify\n",
     "\n",
@@ -51,9 +54,13 @@
    "outputs": [],
    "source": [
     "name = \"boxes\"\n",
+    "control = \"trackball\"\n",
+    "#control = \"orbit\"\n",
+    "\n",
     "cv = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
+    "    control=control,\n",
     "    height=480,\n",
     "    cad_width=640,\n",
     "    tools=True,\n",
@@ -92,6 +99,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a70f989-339a-4994-9a4d-5074b542ef2a",
+   "metadata": {},
+   "source": [
+    "**Pin as PNG**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d153a2d3-fdae-4683-ad6e-28ad976e52a4",
@@ -99,16 +114,6 @@
    "outputs": [],
    "source": [
     "cv.pin_as_png() # same as pressing the pin top right button"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e7076e7-2923-459b-8696-77052d2f82d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.clip_planes"
    ]
   },
   {
@@ -134,8 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2 = open_viewer(\n",
-    "    title=\"CVW 2\",\n",
+    "cv1 = open_viewer(\n",
+    "    title=\"CVW 1\",\n",
     "    anchor=\"split-right\",\n",
     "    cad_width=640,\n",
     "    tree_width=250,\n",
@@ -152,10 +157,9 @@
    "outputs": [],
    "source": [
     "name = \"hexapod\"\n",
-    "cv2.add_shapes(\n",
+    "cv1.add_shapes(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "\n",
     "    #tools=False,\n",
     "    #ortho=False,\n",
     "    control=\"trackball\",\n",
@@ -173,10 +177,11 @@
     "    ambient_intensity=0.5,\n",
     "    direct_intensity=0.3,\n",
     "\n",
-    "    reset_camera=False,\n",
-    "    #position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
-    "    #quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
-    "    #zoom=0.5,\n",
+    "    reset_camera=True,\n",
+    "    position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
+    "    quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
+    "    zoom=0.5,\n",
+    "\n",
     "    timeit=False,\n",
     "    \n",
     "    zoom_speed=0.5,\n",
@@ -202,10 +207,10 @@
    "outputs": [],
    "source": [
     "name = \"hexapod\"\n",
-    "cv = show(\n",
+    "cv2 = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "    title=\"CVW 1\",\n",
+    "    title=\"CVW 2\",\n",
     "    height=480,\n",
     "    cad_width=640,\n",
     "    tools=True,\n",
@@ -231,8 +236,8 @@
     "    ortho=False,\n",
     "    control=\"orbit\",\n",
     "    axes=True,\n",
-    "    grid=(True,True, False),\n",
-    "    ticks=5,\n",
+    "    grid=(True, False, False),\n",
+    "    ticks=40,\n",
     "    transparent=True,\n",
     "    #black_edges=True,\n",
     "\n",
@@ -251,8 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.close()\n",
-    "cv.disposed"
+    "cv1.close()"
    ]
   },
   {
@@ -281,23 +285,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_default(\"CVW 1\")"
+    "set_default_sidecar(\"CVW 1\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1919ce62-5e42-439f-b389-bbb74d4b3f06",
+   "id": "f5bfa179-e0b9-48ca-89ce-cd519fc29488",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"faces\"\n",
+    "name = \"edges\"\n",
     "cv = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
     "    height=600,\n",
     "    cad_width=800,\n",
-    "    reset_camera=False\n",
+    "    reset_camera=True,\n",
+    "    js_debug=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e93a5c35-8eb2-4525-90e5-5afb975549f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"faces\"\n",
+    "cv2 = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    height=480,\n",
+    "    cad_width=640,\n",
+    "    title=\"CVW 2\"\n",
     ")"
    ]
   },
@@ -314,21 +336,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a45056-32e7-48a3-b89a-5590e6e9f738",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_sidecar(\"CVW 1\").widget.position"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "402dd662-0a3c-4df1-ba1d-2d9fe85e249d",
    "metadata": {},
    "outputs": [],
    "source": [
     "get_sidecars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0a45056-32e7-48a3-b89a-5590e6e9f738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sidecar(\"CVW 1\") == cv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62ed92b0-3e9b-4499-9d99-6c785f88f688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sidecar(\"CVW 2\") == cv"
    ]
   },
   {
@@ -356,7 +388,7 @@
    "id": "2154be31-0407-4a87-91b4-100e135c7d08",
    "metadata": {},
    "source": [
-    "# Cell Handling"
+    "# Cell Viewer Handling"
    ]
   },
   {
@@ -382,8 +414,7 @@
     "    black_edges=True,\n",
     "    ortho=False,\n",
     "    timeit=True,\n",
-    "#    normal_len=5,\n",
-    "#    reset_camera=False,\n",
+    "    # normal_len=5,\n",
     ")"
    ]
   },
@@ -416,60 +447,101 @@
   },
   {
    "cell_type": "markdown",
-   "id": "426a0d16-53eb-4020-adad-55efd39fb1f5",
+   "id": "1b1f540d-5565-4476-8770-a159fde93cf4",
    "metadata": {},
    "source": [
-    "## Open viewer in cell"
+    "# Camera location handling\n",
+    "\n",
+    "## Trackball controls"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08cbeb2c-e0bb-41ee-9399-8b5fdf6eb84c",
+   "id": "cde735cc-1d0a-4bae-85f3-a0832b03cdbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"edges\"\n",
     "\n",
     "cv1 = show(\n",
-    "    objects[name],\n",
-    "    states[name], \n",
-    "    cad_width=640, \n",
-    "    height=480, \n",
-    "    ortho=True,\n",
-    "    control=\"trackball\",\n",
-    "    grid=(False, False, False),\n",
-    "    tools=True,\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    height=600,\n",
+    "    cad_width=800,\n",
+    "    title=\"Trackball\",\n",
+    "    reset_camera=True,\n",
+    "    js_debug=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a081c018-0357-43e0-8c83-337179bafeb3",
+   "id": "a2e17418-1839-4a2a-abef-d2ebd6e48abe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv1.position=(96.5764, -1.7474, 37.7064)\n",
+    "cv1.quaternion=(0.4059, 0.3049, 0.7413, 0.4389)\n",
+    "cv1.zoom=0.6\n",
+    "cv1.target=(6.9493, -11.6226, -12.2272)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca53c38d-301e-40ff-a536-dbc36e6d5413",
+   "metadata": {},
+   "source": [
+    "**Do not reset camera location**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed1d338d-aca1-43ed-8ebf-3383bb6a8ec0",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"faces\"\n",
-    "\n",
-    "cv2 = show(\n",
-    "    objects[name],\n",
-    "    states[name], \n",
-    "    cad_width=640, \n",
-    "    height=480, \n",
-    "    ortho=True,\n",
-    "    control=\"orbit\",\n",
-    "    grid=(False, False, False),\n",
-    "    tools=True,\n",
+    "show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"Trackball\",\n",
+    "    reset_camera=False\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b1f540d-5565-4476-8770-a159fde93cf4",
+   "id": "41b06323-bba8-4631-839b-66be8bbc25fa",
    "metadata": {},
    "source": [
-    "# Camera location handling"
+    "**Reset camera location**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d9fee3-4366-4f2d-a14f-11e46a94f36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"faces\"\n",
+    "cv = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"CVW 1\",\n",
+    "    reset_camera=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09d8707e-ab05-4069-9232-ae2af2710a64",
+   "metadata": {},
+   "source": [
+    "## Orbit controls"
    ]
   },
   {
@@ -480,10 +552,18 @@
    "outputs": [],
    "source": [
     "cv = open_viewer(\n",
-    "    title=\"Example\",\n",
+    "    title=\"Orbit\",\n",
     "    cad_width=640,\n",
     "    height=480,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c8bc9ff-48d1-44e5-a414-4da831c42377",
+   "metadata": {},
+   "source": [
+    "**Setting camera location during show will also set the reset location of the camera**"
    ]
   },
   {
@@ -494,30 +574,18 @@
    "outputs": [],
    "source": [
     "name = \"faces\"\n",
-    "control = \"orbit\"\n",
-    "#control = \"trackball\"\n",
     "\n",
     "show(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "    title=\"Example\",\n",
-    "    control=control,\n",
-    "    position=(-55, 68, -31),\n",
-    "    quaternion=None if control == \"orbit\" else (-0.6566, 0.4828, 0.5604, 0.1470),\n",
+    "    title=\"Orbit\",\n",
+    "    control=\"orbit\",\n",
+    "    position=(-43.3, 73.7, -39.3),\n",
+    "    target=(11.7, 5.7, -8.3),\n",
     "    zoom=0.5,\n",
     "    reset_camera=True\n",
     ")\n",
-    "cv.position, cv.quaternion, cv.zoom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9ba15c8-1e31-4317-b956-9ac94fd83ddc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.position, cv.quaternion, cv.zoom"
+    "cv.position, cv.quaternion, cv.target, cv.zoom"
    ]
   },
   {
@@ -527,72 +595,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.position = (35, 6, 87)\n",
-    "cv.quaternion = None if control == \"orbit\" else (0.1619, 0.1017, 0.9068, 0.3756)\n",
+    "cv.position = (85, 25, 55)\n",
+    "cv.target = (0,0,0)\n",
     "cv.zoom = 0.8\n",
     "cv.position, cv.quaternion, cv.zoom"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2810cbf-4d65-4343-9011-acf027f53961",
-   "metadata": {},
-   "source": [
-    "### reset_camera=False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73a613a8-06c6-4762-a004-b912c1b8c0ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"edges\"\n",
-    "\n",
-    "show(\n",
-    "    objects[name], \n",
-    "    states[name],\n",
-    "    title=\"Example\",\n",
-    "    control=control,\n",
-    "    reset_camera=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a079f870-d8d4-45ad-ad4e-e4724d414e8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.position, cv.quaternion, cv.zoom"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b679f0a4-1453-4d7d-94b6-d2980a025c37",
-   "metadata": {},
-   "source": [
-    "### reset_camera=True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "445a6a39-3858-4d6a-86bb-a36687c8082d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"vertices\"\n",
-    "\n",
-    "show(\n",
-    "    objects[name], \n",
-    "    states[name],\n",
-    "    title=\"Example\",\n",
-    "    control=control,\n",
-    "    reset_camera=True\n",
-    ")"
    ]
   },
   {
@@ -602,7 +608,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.position, cv.quaternion, cv.zoom"
+    "cv.position, cv.quaternion, cv.target, cv.zoom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cce4a83-4ada-4509-9596-4bcd3e4b2a65",
+   "metadata": {},
+   "source": [
+    "**Quaternions with orbit control can be accessed from widget, however, for information only**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aace0d5a-d527-4087-9cfc-c671f807d1e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.quaternion"
    ]
   },
   {
@@ -952,7 +976,24 @@
    "id": "ddb9b01a-5938-4e3b-b945-240f5d09b8b3",
    "metadata": {},
    "source": [
-    "## Rotations"
+    "# Rotations\n",
+    "## Trackball Control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "223d7ddc-b040-49d2-9d36-98b2d35a0f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"Examples\",\n",
+    "    reset_camera=True\n",
+    ")"
    ]
   },
   {
@@ -966,7 +1007,7 @@
     "    cv.rotate_x(1)\n",
     "    cv.rotate_y(3)\n",
     "    cv.rotate_z(5)\n",
-    "    time.sleep(0.1)"
+    "    time.sleep(0.05)"
    ]
   },
   {
@@ -980,7 +1021,32 @@
     "    cv.rotate_z(-5)\n",
     "    cv.rotate_y(-3)\n",
     "    cv.rotate_x(-1)\n",
-    "    time.sleep(0.1)    "
+    "    time.sleep(0.05)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc1c9a13-8f31-4755-8dde-3c843ddfe13a",
+   "metadata": {},
+   "source": [
+    "## Orbit control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfa5661a-7d91-4bf1-bf80-955e3f926c93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    control=\"orbit\",\n",
+    "    title=\"Examples\",\n",
+    "    reset_camera=True\n",
+    ")"
    ]
   },
   {
@@ -990,8 +1056,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.rotate_up(30)\n",
-    "cv.rotate_left(30)"
+    "for i in range(10):\n",
+    "    cv.rotate_up(3)\n",
+    "    cv.rotate_left(1)\n",
+    "    time.sleep(0.05)"
    ]
   },
   {
@@ -1001,8 +1069,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.rotate_left(-30)\n",
-    "cv.rotate_up(-30)"
+    "for i in range(10):\n",
+    "    cv.rotate_left(-1)\n",
+    "    cv.rotate_up(-3)\n",
+    "    time.sleep(0.05)    "
    ]
   },
   {
@@ -1024,7 +1094,7 @@
     "cv = show(\n",
     "    objects[name],\n",
     "    states[name],\n",
-    "#    title=\"Animation\",\n",
+    "    title=\"Animation\",\n",
     "    height=600,\n",
     "    cad_width=800,\n",
     "    control=\"trackball\",\n",
@@ -1121,7 +1191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cv.clear_tracks()"
+    "cv.clear_tracks()"
    ]
   },
   {
@@ -1130,26 +1200,28 @@
    "id": "56a8f6ff-f27e-4b28-be21-16a5148cc636",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "close_sidecars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c854ac98-ea8e-467b-b961-ad7d13aaa93b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "language_info": {
+   "name": "python",
+   "pygments_lexer": "ipython3"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
   }
  },
  "nbformat": 4,
