adapted to changes

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -53,7 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"boxes\"\n",
+    "%%time\n",
+    "name = \"hexapod\"\n",
     "control = \"trackball\"\n",
     "#control = \"orbit\"\n",
     "\n",
@@ -66,6 +67,56 @@
     "    tools=True,\n",
     "    js_debug=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dc9ab4c-5689-476d-813e-d3e816d9cfb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from cad_viewer_widget import AnimationTrack\n",
+    "\n",
+    "horizontal_angle = 25\n",
+    "\n",
+    "def intervals(count):\n",
+    "    r = [ min(180, (90 + i*(360 // count)) % 360) for i in range(count)]\n",
+    "    return r \n",
+    "\n",
+    "def times(end, count):\n",
+    "    return np.linspace(0, end, count+1)\n",
+    "    \n",
+    "def vertical(count, end, offset, reverse):\n",
+    "    ints = intervals(count)\n",
+    "    heights = [round(35 * np.sin(np.deg2rad(x)) - 15, 1) for x in ints]\n",
+    "    heights.append(heights[0])\n",
+    "    return times(end, count), heights[offset:] + heights[1:offset+1]\n",
+    "\n",
+    "def horizontal(end, reverse):\n",
+    "    factor = 1 if reverse else -1\n",
+    "    return times(end, 4), [0, factor * horizontal_angle, 0, -factor * horizontal_angle, 0]\n",
+    "\n",
+    "\n",
+    "leg_group = (\"left_front\", \"right_middle\", \"left_back\")\n",
+    "leg_names = ['right_back', 'right_middle', 'right_front', 'left_back', 'left_middle', 'left_front']\n",
+    "\n",
+    "for name in leg_names:\n",
+    "    # move upper leg\n",
+    "    cv.add_track(AnimationTrack(\n",
+    "        f\"/bottom/{name}\", \n",
+    "        \"rz\", *horizontal(4, \"middle\" in name)\n",
+    "    ))\n",
+    "\n",
+    "    # move lower leg\n",
+    "    cv.add_track(AnimationTrack(\n",
+    "        f\"/bottom/{name}/lower\", \n",
+    "        \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)\n",
+    "    ))\n",
+    "\n",
+    "cv.animate(3)"
    ]
   },
   {
@@ -326,6 +377,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "af6e1d01-f96e-4669-955a-4825962280c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"vertices\"\n",
+    "cv2 = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    height=480,\n",
+    "    cad_width=640,\n",
+    "    title=\"CVW 2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a6aaed86-e0ae-4bd4-94fc-da4c441c20d0",
    "metadata": {},
    "outputs": [],
@@ -361,16 +429,6 @@
    "outputs": [],
    "source": [
     "get_sidecar(\"CVW 2\") == cv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93ade311-ade8-47ff-859c-0a044f347103",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.position, cv.quaternion"
    ]
   },
   {
@@ -573,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"faces\"\n",
+    "name = \"edges\"\n",
     "\n",
     "show(\n",
     "    objects[name], \n",
