--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -70,56 +70,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9dc9ab4c-5689-476d-813e-d3e816d9cfb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "from cad_viewer_widget import AnimationTrack\n",
-    "\n",
-    "horizontal_angle = 25\n",
-    "\n",
-    "def intervals(count):\n",
-    "    r = [ min(180, (90 + i*(360 // count)) % 360) for i in range(count)]\n",
-    "    return r \n",
-    "\n",
-    "def times(end, count):\n",
-    "    return np.linspace(0, end, count+1)\n",
-    "    \n",
-    "def vertical(count, end, offset, reverse):\n",
-    "    ints = intervals(count)\n",
-    "    heights = [round(35 * np.sin(np.deg2rad(x)) - 15, 1) for x in ints]\n",
-    "    heights.append(heights[0])\n",
-    "    return times(end, count), heights[offset:] + heights[1:offset+1]\n",
-    "\n",
-    "def horizontal(end, reverse):\n",
-    "    factor = 1 if reverse else -1\n",
-    "    return times(end, 4), [0, factor * horizontal_angle, 0, -factor * horizontal_angle, 0]\n",
-    "\n",
-    "\n",
-    "leg_group = (\"left_front\", \"right_middle\", \"left_back\")\n",
-    "leg_names = ['right_back', 'right_middle', 'right_front', 'left_back', 'left_middle', 'left_front']\n",
-    "\n",
-    "for name in leg_names:\n",
-    "    # move upper leg\n",
-    "    cv.add_track(AnimationTrack(\n",
-    "        f\"/bottom/{name}\", \n",
-    "        \"rz\", *horizontal(4, \"middle\" in name)\n",
-    "    ))\n",
-    "\n",
-    "    # move lower leg\n",
-    "    cv.add_track(AnimationTrack(\n",
-    "        f\"/bottom/{name}/lower\", \n",
-    "        \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)\n",
-    "    ))\n",
-    "\n",
-    "cv.animate(3)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7324f596-ef6c-45b8-a1f0-e918ab84ca1b",
    "metadata": {},
@@ -253,24 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a85a650-fa48-410a-b79f-b3c112d33dcf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"hexapod\"\n",
-    "cv2 = show(\n",
-    "    objects[name], \n",
-    "    states[name],\n",
-    "    title=\"CVW 2\",\n",
-    "    height=480,\n",
-    "    cad_width=640,\n",
-    "    tools=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "25bb9904-f331-43c6-b0c7-4ea9bb74715f",
    "metadata": {},
    "outputs": [],
@@ -303,11 +235,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b4953e-3b6a-44d5-86e8-91e70b6f2033",
+   "id": "330b67be-198d-4a69-b759-19a3237999e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "cv1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a85a650-fa48-410a-b79f-b3c112d33dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"hexapod\"\n",
+    "cv = show(\n",
+    "    objects[name], \n",
+    "    states[name],\n",
+    "    title=\"CVW 2\",\n",
+    "    height=480,\n",
+    "    cad_width=640,\n",
+    "    tools=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dc9ab4c-5689-476d-813e-d3e816d9cfb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from cad_viewer_widget import AnimationTrack\n",
+    "\n",
+    "horizontal_angle = 25\n",
+    "\n",
+    "def intervals(count):\n",
+    "    r = [ min(180, (90 + i*(360 // count)) % 360) for i in range(count)]\n",
+    "    return r \n",
+    "\n",
+    "def times(end, count):\n",
+    "    return np.linspace(0, end, count+1)\n",
+    "    \n",
+    "def vertical(count, end, offset, reverse):\n",
+    "    ints = intervals(count)\n",
+    "    heights = [round(35 * np.sin(np.deg2rad(x)) - 15, 1) for x in ints]\n",
+    "    heights.append(heights[0])\n",
+    "    return times(end, count), heights[offset:] + heights[1:offset+1]\n",
+    "\n",
+    "def horizontal(end, reverse):\n",
+    "    factor = 1 if reverse else -1\n",
+    "    return times(end, 4), [0, factor * horizontal_angle, 0, -factor * horizontal_angle, 0]\n",
+    "\n",
+    "\n",
+    "leg_group = (\"left_front\", \"right_middle\", \"left_back\")\n",
+    "leg_names = ['right_back', 'right_middle', 'right_front', 'left_back', 'left_middle', 'left_front']\n",
+    "\n",
+    "for name in leg_names:\n",
+    "    # move upper leg\n",
+    "    cv.add_track(AnimationTrack(\n",
+    "        f\"/bottom/{name}\", \n",
+    "        \"rz\", *horizontal(4, \"middle\" in name)\n",
+    "    ))\n",
+    "\n",
+    "    # move lower leg\n",
+    "    cv.add_track(AnimationTrack(\n",
+    "        f\"/bottom/{name}/lower\", \n",
+    "        \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)\n",
+    "    ))\n",
+    "\n",
+    "cv.animate(3)"
    ]
   },
   {
@@ -1266,6 +1266,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c854ac98-ea8e-467b-b961-ad7d13aaa93b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.tracks = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe2e7a19-065e-4f7d-9ff2-29bb01b558f5",
    "metadata": {},
    "outputs": [],
    "source": []
