add pip install pythonocc-core

--- a/notebooks/Classic-OCC-Bottle.ipynb
+++ b/notebooks/Classic-OCC-Bottle.ipynb
@@ -27,6 +27,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ea08f7ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install pythonocc-core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d1249cd2-0861-4091-aee3-cebd21626e33",
    "metadata": {},
    "outputs": [],
@@ -478,14 +488,14 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python",
-   "pygments_lexer": "ipython3"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
