--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -53,8 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "name = \"hexapod\"\n",
+    "name = \"boxes\"\n",
     "control = \"trackball\"\n",
     "#control = \"orbit\"\n",
     "\n",
@@ -62,10 +61,12 @@
     "    objects[name], \n",
     "    states[name],\n",
     "    control=control,\n",
-    "    height=480,\n",
-    "    cad_width=640,\n",
-    "    tools=True,\n",
-    "    js_debug=True\n",
+    "    height=540,\n",
+    "    cad_width=720,\n",
+    "    glass=True,\n",
+    "    js_debug=True,\n",
+    "    collapse=1,\n",
+    "    theme=\"browser\",\n",
     ")"
    ]
   },
@@ -143,10 +144,10 @@
     "cv1 = open_viewer(\n",
     "    title=\"CVW 1\",\n",
     "    anchor=\"split-right\",\n",
-    "    cad_width=640,\n",
+    "    cad_width=700,\n",
     "    tree_width=250,\n",
-    "    height=480,\n",
-    "    theme=\"light\",\n",
+    "    height=525,\n",
+    "    glass=True\n",
     ")"
    ]
   },
@@ -164,7 +165,6 @@
     "    #tools=False,\n",
     "    #ortho=False,\n",
     "    control=\"trackball\",\n",
-    "    #control=\"orbit\",\n",
     "    axes=False,\n",
     "    axes0=False,\n",
     "    grid=(True,True, False),\n",
@@ -182,9 +182,8 @@
     "    position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
     "    quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
     "    zoom=0.5,\n",
-    "\n",
     "    timeit=False,\n",
-    "    \n",
+    "\n",
     "    zoom_speed=0.5,\n",
     "    pan_speed=0.5,\n",
     "    rotate_speed=1.0,\n",
@@ -213,8 +212,8 @@
     "    states[name],\n",
     "    title=\"CVW 2\",\n",
     "    anchor=\"split-right\",\n",
-    "    height=480,\n",
-    "    cad_width=640,\n",
+    "    height=600,\n",
+    "    cad_width=800,\n",
     "    \n",
     "    ortho=False,\n",
     "    control=\"orbit\",\n",
@@ -245,6 +244,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00b21406-2294-4e27-ad99-24a12b5bef25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sidecars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0a85a650-fa48-410a-b79f-b3c112d33dcf",
    "metadata": {},
    "outputs": [],
@@ -254,9 +263,8 @@
     "    objects[name], \n",
     "    states[name],\n",
     "    title=\"CVW 2\",\n",
-    "    height=480,\n",
-    "    cad_width=640,\n",
-    "    tools=True,\n",
+    "    collapse=1,\n",
+    "    glass=True\n",
     ")"
    ]
   },
@@ -322,6 +330,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "211e2d4e-f12b-46b1-a81e-e22cc119fcf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sidecars()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "deb41d73-8331-41ac-abd5-0c3c478c07f7",
    "metadata": {},
@@ -368,8 +386,8 @@
     "cv2 = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "    height=480,\n",
-    "    cad_width=640,\n",
+    "    height=600,\n",
+    "    cad_width=800,    \n",
     "    title=\"CVW 2\"\n",
     ")"
    ]
@@ -385,8 +403,7 @@
     "cv2 = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "    height=480,\n",
-    "    cad_width=640,\n",
+    "    reset_camera=False,\n",
     "    title=\"CVW 2\"\n",
     ")"
    ]
@@ -479,16 +496,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e47f9799-10bd-4708-b233-4905f49a9e92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv3.widget.grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "daf89154-8510-45f5-9a56-f8b974dafefc",
    "metadata": {},
    "outputs": [],
@@ -498,9 +505,13 @@
     "    objects[name],\n",
     "    states[name],\n",
     "\n",
-    "    height=600,\n",
-    "    cad_width=800,\n",
-    ")\n"
+    "    cad_width=400,\n",
+    "    height=300,\n",
+    "    glass=True,\n",
+    "    collapse=2,\n",
+    "    pinning=True\n",
+    ")\n",
+    "cv4.remove_ui_elements([\"axes\", \"axes0\", \"grid\", \"ortho\", \"more\", \"help\"])"
    ]
   },
   {
@@ -589,7 +600,7 @@
     "cv = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
-    "    title=\"CVW 1\",\n",
+    "    title=\"Trackball\",\n",
     "    reset_camera=True\n",
     ")"
    ]
@@ -611,8 +622,8 @@
    "source": [
     "cv = open_viewer(\n",
     "    title=\"Orbit\",\n",
-    "    cad_width=640,\n",
-    "    height=480,\n",
+    "    cad_width=700,\n",
+    "    height=525,\n",
     ")"
    ]
   },
@@ -639,7 +650,6 @@
     "    title=\"Orbit\",\n",
     "    control=\"orbit\",\n",
     "    position=(-43.3, 73.7, -39.3),\n",
-    "    target=(11.7, 5.7, -8.3),\n",
     "    zoom=0.5,\n",
     "    reset_camera=True\n",
     ")\n",
@@ -705,10 +715,10 @@
     "cv = open_viewer(\n",
     "    title = \"Examples\",\n",
     "    anchor=\"right\",\n",
-    "    cad_width=640,\n",
-    "    height=480\n",
-    ")\n",
-    "cv.js_debug=True"
+    "    cad_width=700,\n",
+    "    height=525,\n",
+    "    glass=True\n",
+    ")"
    ]
   },
   {
@@ -734,7 +744,8 @@
     "            objects[name],\n",
     "            states[name],\n",
     "            title=\"Examples\",\n",
-    "            control=control\n",
+    "            control=control,\n",
+    "            js_debug=True\n",
     "        )\n",
     "\n",
     "menu.observe(on_change)\n",
@@ -782,6 +793,26 @@
     "    '/bottom/bottom_0': (1,1),\n",
     "    '/bottom/top/top_0': [1,1],\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af312ccb-a9c7-472a-8715-08ddc8bd02fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.collapse = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0e2c83-413e-416f-b8e6-2f56a4203c96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.collapse = 1"
    ]
   },
   {
@@ -892,7 +923,18 @@
     "cv.transparent = not cv.transparent\n",
     "cv.black_edges = not cv.black_edges\n",
     "cv.tools = not cv.tools\n",
+    "cv.glass = not cv.glass\n",
     "cv.ortho = not cv.ortho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5991d6e4-0609-41a7-9598-1459bc113806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.glass = not cv.glass"
    ]
   },
   {
@@ -1049,8 +1091,10 @@
     "cv = show(\n",
     "    objects[name], \n",
     "    states[name],\n",
+    "    control=\"trackball\",\n",
     "    title=\"Examples\",\n",
-    "    reset_camera=True\n",
+    "    reset_camera=True,\n",
+    "    glass=False\n",
     ")"
    ]
   },
@@ -1265,17 +1309,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c854ac98-ea8e-467b-b961-ad7d13aaa93b",
+   "id": "db926d1b-8097-487b-b8e4-74f86f7774ee",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cv.widget.tracks = []"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe2e7a19-065e-4f7d-9ff2-29bb01b558f5",
+   "id": "2e9a97cd-4820-4216-a132-501cfed952a7",
    "metadata": {},
    "outputs": [],
    "source": []
