adapt examples and tests

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -61,8 +61,8 @@
     "    objects[name], \n",
     "    states[name],\n",
     "    control=control,\n",
-    "    height=540,\n",
-    "    cad_width=720,\n",
+    "    cad_width=700,\n",
+    "    height=525,\n",
     "    glass=True,\n",
     "    js_debug=True,\n",
     "    collapse=1,\n",
@@ -181,7 +181,7 @@
     "    reset_camera=True,\n",
     "    position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
     "    quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
-    "    zoom=0.5,\n",
+    "    zoom=0.8,\n",
     "    timeit=False,\n",
     "\n",
     "    zoom_speed=0.5,\n",
@@ -227,7 +227,7 @@
     "    default_edge_color=\"#707070\",\n",
     "    default_opacity=0.5,\n",
     "    ambient_intensity=0.5,\n",
-    "    direct_intensity=0.3,    \n",
+    "    direct_intensity=0.3,   \n",
     ")"
    ]
   },
@@ -264,7 +264,7 @@
     "    states[name],\n",
     "    title=\"CVW 2\",\n",
     "    collapse=1,\n",
-    "    glass=True\n",
+    "    glass=True,\n",
     ")"
    ]
   },
