turn glass mode off

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -63,7 +63,7 @@
     "    control=control,\n",
     "    cad_width=700,\n",
     "    height=525,\n",
-    "    glass=True,\n",
+    "    glass=False,\n",
     "    js_debug=True,\n",
     "    collapse=1,\n",
     "    theme=\"browser\",\n",
