add changing cad view dimensions

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -61,10 +61,11 @@
     "    objects[name], \n",
     "    states[name],\n",
     "    control=control,\n",
-    "    cad_width=700,\n",
-    "    height=525,\n",
+    "    cad_width=750,\n",
+    "    tree_width=250,\n",
+    "    height=600,\n",
     "    glass=False,\n",
-    "    js_debug=True,\n",
+    "    js_debug=False,\n",
     "    collapse=1,\n",
     "    theme=\"browser\",\n",
     ")"
@@ -717,7 +718,7 @@
     "    anchor=\"right\",\n",
     "    cad_width=700,\n",
     "    height=525,\n",
-    "    glass=True\n",
+    "    glass=False\n",
     ")"
    ]
   },
@@ -759,6 +760,32 @@
     "    js_debug=True\n",
     ")\n",
     "menu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba0614ea-6b98-406f-8dbc-d88d5e6fc0ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.cad_width = 900\n",
+    "cv.widget.tree_width = 300\n",
+    "cv.widget.height = 700\n",
+    "cv.widget.glass = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9000127b-1dba-4aca-8217-c83484cd0f54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.cad_width = 700\n",
+    "cv.widget.tree_width = 250\n",
+    "cv.widget.height = 525\n",
+    "cv.widget.glass = False"
    ]
   },
   {
